[package]
edition = "2021"
name = "minecraft-essentials"
version = "0.5.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
# minecraft-essentials = {git = "https://github.com/minecraft-essentials/minecraft-essentials"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
