[package]
edition = "2021"
name = "minecraft-essentials"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.0", default-features = false, features = ["napi4", "tokio"] }
napi-derive = "2.15.0"
minecraft-essentials = {git = "https://github.com/minecraft-essentials/minecraft-essentials"}

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
